--- a/templates/admin/basics/top.html.twig
+++ b/templates/admin/basics/top.html.twig
@@ -28,7 +28,9 @@
 
     <script type="text/javascript" src="assets/js/plugins/uploaders/plupload/plupload.full.min.js"></script>
     <script type="text/javascript" src="assets/js/plugins/uploaders/plupload/plupload.queue.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/forms/selects/select2.min.js"></script>
     <script type="text/javascript" src="assets/js/pages/uploader_plupload.js"></script>
+    <script type="text/javascript" src="assets/js/pages/form_select2.js"></script>
 
     <!-- Theme JS files -->
     <script type="text/javascript" src="assets/js/plugins/forms/styling/switchery.min.js"></script>
